# vexdb

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  core_sq8_bench.cpp  placeholder_bench.cpp
docs/: PRD.md
python/: CMakeLists.txt  bindings.cpp  test_vexdb.py
src/core/: query_result.h  sq8.cpp  sq8.h  vexdb.cpp  vexdb.h
src/index/: hnsw_index.h
src/persistence/: loader.cpp  loader.h
src/segment/: active_segment.cpp  active_segment.h  id_mapping.cpp  id_mapping.h  sealed_segment.h  segment_manager.cpp  segment_manager.h
src/store/: concept.h  in_memory_store.cpp  in_memory_store.h  mmap_store.cpp
tests/: CMakeLists.txt  core_sq8_test.cpp  persistence_test.cpp  placeholder_test.cpp  segment_active_segment_test.cpp  segment_id_mapping_test.cpp  segment_segment_manager_test.cpp  store_in_memory_store_test.cpp
